Stop links being visible on print

--- a/static/template.css
+++ b/static/template.css
@@ -224,6 +224,7 @@ main {
       padding: 0;
       font-weight: 400; }
       .resume main a {
+        color: inherit;
         text-decoration: none; }
       .resume main h2 {
         margin-top: 0.8em;
